--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<p>I'd like to <b>visit all 50 states in the U.S.</b> as well as visit a few countries too. It is important that I keep track of where I've been in order to keep the memories and appreciate the times that I've been lucky enough to have those experiences. I would also like to include a little description of my visit for each place. I count a state visited when I can remember spending at least an hour there. For example, I'd still count Nevada as visited, even though I've only been to the Las Vegas Airport.</p>
 
 <h1>The United States</h1>
+
+<b>States I have Been to in the U.S.:</b>
 <ul>
-	<b>States I have Been to in the U.S.:</b>
 	<li>California</li>
 	<li>Colorado</li>
 	<li><a href="florida.html">Florida</a></li>
@@ -34,8 +35,8 @@
 	<li>Wisconsin</li>
 </ul>
 
+<b>States I have not been to in the U.S.:</b>
 <ul>
-	<b>States I have <i>not</i> been to in the U.S.:</b>
 	<li>Arizona</li>
 	<li>Arkansas</li>
 	<li>Connecticut</li>
@@ -118,7 +119,12 @@
   			</tr>
 		</table>
 
+<p>My love of travel isn't an uncommon thing. There are many inspirational travelers out there who document them very well. Here's one I enjoy: <a href="http://www.nomadicmatt.com/travel-blog/">
+Matt's Travel Blog
+</a></p>
+<p>This inspirational travel blog is a good one because it has great usability and a lot of things to click on. With a travel blog, the most important elements are images and color and he includes that in a fun way. He also has ways to make the reader/viewer interact such as getting them on an email list or pages that help them get started on their own trips. Matt's site has some recognizable elements such as the basic HTML bones, image tags, paragraph tags, and the html for buttons. He also has a lot of things that are more complex such as `article class` tags which I believe includes a link to an article and the thumbnail settings.</p>
+
+<footer>Content by Elizabeth Martinez</footer>
 </body>
 
-<footer></footer>
 </html>
