--- a/florida.html
+++ b/florida.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Florida</title>
+	<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <header>
 	<a href="index.html">Home</a>
