--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My Adventure Site</title>
+	<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 	<h1>Welcome to My Book of Adventures!</h1>
