Add images, an html page, modifications on html and css for my webpage

--- a/florida.html
+++ b/florida.html
@@ -11,20 +11,20 @@
 <h1>My Visit to Florida</h1>
 <p>My visit to florida included a visit to the beach, orange groves, and Disney World. We have family there, so we visit often. My favorite thing about Florida is the <b>weather</b> because you can do more outdoor activities year-round.</p>
 
-<img src="C:/Sites/e86400.github.io/images/florida1.jpg" alt="Beach Shell" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/florida1.jpg" alt="Beach Shell">
 
-<img src="C:/Sites/e86400.github.io/images/florida2.jpg" alt="Orange Groves" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/florida2.jpg" alt="Orange Groves">
 
-<img src="C:/Sites/e86400.github.io/images/florida3.jpg" alt="Gator" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/florida3.jpg" alt="Gator">
 
-<img src="C:/Sites/e86400.github.io/images/florida4.jpg" alt="Me by Groves" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/florida4.jpg" alt="Me by Groves">
 
-<img src="C:/Sites/e86400.github.io/images/florida5.jpg" alt="Fish" style="width:228px;height:304px;">
+<img src="C:/Sites/e86400.github.io/images/florida5.jpg" alt="Fish">
 
-<img src="C:/Sites/e86400.github.io/images/florida6.jpg" alt="Disney" style="width:228px;height:304px;">
+<img src="C:/Sites/e86400.github.io/images/florida6.jpg" alt="Disney">
 
 
-
+<div class="footer"><footer>Content by Elizabeth Martinez</footer></div>
 </body>
 
 </html>
