--- a/new_york.html
+++ b/new_york.html
@@ -11,20 +11,20 @@
 <h1>My Visit to New York</h1>
 <p>I visited New York in 2011 on a J-term trip during college. I was able to see Times Square, ride a double decker tour bus, see the numerous character costumes all over the city, ride a ferry to Liberty Island, see the United Nations building, and visit the Alice in Wonderland Statue somewhere in Central Park.</p>
 
-<img src="C:/Sites/e86400.github.io/images/ny1.jpg" alt="Times Square" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/ny1.jpg" alt="Times Square">
 
-<img src="C:/Sites/e86400.github.io/images/ny2.jpg" alt="Double Decker Bus" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/ny2.jpg" alt="Double Decker Bus">
 
-<img src="C:/Sites/e86400.github.io/images/ny3.jpg" alt="Elmos" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/ny3.jpg" alt="Elmos">
 
-<img src="C:/Sites/e86400.github.io/images/ny4.jpg" alt="Ferry" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/ny4.jpg" alt="Ferry">
 
-<img src="C:/Sites/e86400.github.io/images/ny5.jpg" alt="United Nations Building" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/ny5.jpg" alt="United Nations Building">
 
-<img src="C:/Sites/e86400.github.io/images/ny6.jpg" alt="Alice in Wonderland Statue" style="width:304px;height:228px;">
+<img src="C:/Sites/e86400.github.io/images/ny6.jpg" alt="Alice in Wonderland Statue">
 
 
-
+<div class="footer"><footer>Content by Elizabeth Martinez</footer></div>
 </body>
 
 </html>
