Add modifications to pages for my site

--- a/florida.html
+++ b/florida.html
@@ -24,7 +24,10 @@
 <img src="C:/Sites/e86400.github.io/images/florida6.jpg" alt="Disney">
 
 
-<div class="footer"><footer>Content by Elizabeth Martinez</footer></div>
-</body>
+<div class="footer">
+	<footer>
+	<a href="contact.html">Hi, I'm Elizabeth. Say Hello</a> 
+	</footer>
+</div>
 
 </html>
