--- a/hawaii.html
+++ b/hawaii.html
@@ -26,7 +26,10 @@
 
 <img src="C:/Sites/e86400.github.io/images/hawaii6.jpg" alt="Hotel View">
 
-<div class="footer"><footer>Content by Elizabeth Martinez</footer></div>
-</body>
+<div class="footer">
+	<footer>
+	<a href="contact.html">Hi I'm Elizabeth. Say Hello</a> 
+	</footer>
+</div>
 
 </html>
