--- a/new_york.html
+++ b/new_york.html
@@ -24,7 +24,10 @@
 <img src="C:/Sites/e86400.github.io/images/ny6.jpg" alt="Alice in Wonderland Statue">
 
 
-<div class="footer"><footer>Content by Elizabeth Martinez</footer></div>
-</body>
+<div class="footer">
+	<footer>
+	<a href="contact.html">Hi, I'm Elizabeth. Say Hello</a> 
+	</footer>
+</div>
 
 </html>
